fix loading alignment, remove column price

--- a/assets/component-cart-items.css
+++ b/assets/component-cart-items.css
@@ -20,6 +20,7 @@
 }
 
 .cart-item__image {
+  height: auto;
   max-width: 100%;
 }
 
@@ -67,6 +68,10 @@
   margin: 0;
 }
 
+.cart-item__discounted-prices .cart-item__old-price {
+  font-size: 1.4rem;
+}
+
 .cart-item__old-price {
   opacity: 0.7;
 }
@@ -78,7 +83,6 @@
 
 .cart-item cart-remove-button {
   display: inline-block;
-  margin: 2rem 0 0 auto;
 }
 
 @media screen and (min-width: 750px) and (max-width: 989px) {
@@ -114,15 +118,15 @@ cart-remove-button .icon-remove {
 }
 
 .cart-item .loading-overlay {
-  top: auto;
+  top: 0;
   left: auto;
+  right: auto;
   bottom: 0;
   padding: 0;
 }
 
 @media screen and (min-width: 750px) {
   .cart-item .loading-overlay {
-    top: 0;
     padding-top: 5.5rem;
     bottom: auto;
   }
@@ -202,11 +206,19 @@ cart-remove-button .icon-remove {
   }
 
   .cart-item__details {
-    grid-column: 2 / 4;
+    grid-column: 2 / 5;
   }
 
   .cart-item__quantity {
-    grid-column: 2 / 4;
+    grid-column: 2 / 5;
+  }
+
+  .cart-item__quantity label {
+    display: block;
+  }
+
+  .cart-item__quantity .quantity {
+    display: inline-flex;
   }
 
   .cart-item__totals {
